09 August 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/views/annotation/annotation.component.ts:
 Fixes in the way open Documents are handled. Old behaviour was buggy (still
 buggy in the AngularJS front-end).

 * clarin-angular/src/app/services/restore-annotation-service/restore-annotation.service.ts:
 * backend/clarin/app/Http/Controllers/OpenDocumentController.php: Added the
 ability to set db_interactions for all users of the document to 0.

 * clarin-angular/src/app/services/sse-service/sse.service.ts: Fixed missing
 events after re-connect (by firtering events propagated to the observer as
 errors).

 * backend/clarin/app/Http/Controllers/TempAnnotationController.php: Added
 "id"s in SSE messages.

08 August 2021 Petasis George <petasis@iit.demokritos.gr>:
 * backend/clarin/app/Http/Controllers/OpenDocumentController.php: Changes to
 return the user id. If 'db_interactions' is specified in store(), its value
 is set instead of the default calculated one.

 * backend/clarin/app/Http/Controllers/TempAnnotationController.php: Service
 now returns the value of 'cd_interactions'.

 * clarin-angular/src/app/services/restore-annotation-service/restore-annotation.service.ts:
 Changed service to set the db_interactions to 0 when a new Temp Document is
 created.

03 August 2021 Petasis George <petasis@iit.demokritos.gr>:
 * clarin-angular/src/app/components/controls/annotation-visualizer/annotation-visualizer.component.ts:
 * clarin-angular/src/app/components/controls/text-widget/text-widget.component.ts:
 * clarin-angular/src/app/components/views/annotation/annotation.component.html:
 * clarin-angular/src/app/components/views/annotation/annotation.component.ts:
 * clarin-angular/src/app/services/text-widget/text-widget.service.ts:
 * frontend/clarin/templates/directives/annotation-visualizer.html: Working
 settings (at least to the filtering of Annotations part).

02 August 2021 Petasis George <petasis@iit.demokritos.gr>: